# evgraph

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile_backend  Dockerfile_frontend  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
INPUT/: bets_data.csv  odds_data.csv
api/: config.py  crud.py  db.py  main.py  models.py  routes.py
frontend/: .env  .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: BetDetails.tsx  SessionBetsTable.tsx  SessionsList.tsx
